--- a/package.json
+++ b/package.json
@@ -5,11 +5,12 @@
   "main": "index.js",
   "scripts": {
     "ng": "ng",
-    "build": "rimraf dist && ng build --prod --aot --base-href ./ && tsc --project server/tsconfig.json",
-    "start": "pm2 start ./dist/server/server.js --no-daemon",
-    "dev": "concurrently \"npm run backend\" \"npm run client\" ",
-    "client": "ng serve --progress false --proxy-config proxy.conf.json",
-    "backend": "nodemon"
+    "build": "rimraf dist && ng build --prod --aot --base-href ./ && tsc --project ./server/tsconfig.json",
+    "start": "npx ts-node --project ./server/tsconfig.json ./server/src/server.ts",
+    "start:prod": "pm2 start ./dist/server/server.js --no-daemon",
+    "dev": "concurrently \"npm run dev:backend\" \"npm run dev:client\" ",
+    "dev:client": "ng serve --progress false",
+    "dev:backend": "nodemon"
   },
   "repository": {
     "type": "git",
@@ -42,12 +43,17 @@
     "@angular/platform-browser-dynamic": "^6.0.3",
     "@angular/router": "^6.0.3",
     "body-parser": "^1.18.3",
+    "colors": "^1.3.0",
     "core-js": "^2.5.4",
+    "dotenv": "^6.0.0",
     "express": "^4.16.3",
-    "giuseppe": "^3.1.0",
     "mongoose": "^5.1.7",
     "morgan": "^1.9.0",
+    "multer": "^1.3.1",
+    "reflect-metadata": "^0.1.12",
+    "routing-controllers": "^0.7.7",
     "rxjs": "^6.0.0",
+    "typegoose": "^5.2.1",
     "zone.js": "^0.8.26"
   },
   "devDependencies": {
@@ -58,6 +64,11 @@
     "@types/express": "^4.16.0",
     "@types/jasmine": "~2.8.6",
     "@types/jasminewd2": "~2.0.3",
+    "@types/mongodb": "^3.1.0",
+    "@types/mongoose": "^5.0.18",
+    "@types/body-parser": "^1.17.0",
+    "@types/multer": "^1.3.7",
+    "@types/morgan": "^1.7.35",
     "@types/node": "~8.9.4",
     "codelyzer": "~4.2.1",
     "concurrently": "^3.6.0",
@@ -69,9 +80,10 @@
     "karma-jasmine": "~1.1.1",
     "karma-jasmine-html-reporter": "^0.2.2",
     "nodemon": "^1.17.5",
+    "pm2": "^2.10.4",
     "protractor": "~5.3.0",
     "ts-node": "~5.0.1",
     "tslint": "~5.9.1",
-    "typescript": "~2.7.2"
+    "typescript": "^2.7.2"
   }
 }
