--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "mango",
   "version": "1.0.0",
-  "description": "A MEAN (Mongo Express Angular Node) template with some GraphQL flavour and giusseppe for routing in express",
+  "description": "A MEAN (MySQL Express Angular Node) template with some GraphQL flavour",
   "main": "index.js",
   "scripts": {
     "ng": "ng",
@@ -17,13 +17,12 @@
     "url": "git+https://github.com/MrARC/Mango.git"
   },
   "keywords": [
-    "mean",
-    "mann",
     "graphql-mean",
     "typescript",
-    "mongomean",
-    "angular",
-    "nest.js"
+    "mysql",
+    "express",
+    "node",
+    "angular"
   ],
   "author": "Alfonso Reyes",
   "license": "ISC",
@@ -47,13 +46,11 @@
     "core-js": "^2.5.4",
     "dotenv": "^6.0.0",
     "express": "^4.16.3",
-    "mongoose": "^5.1.7",
     "morgan": "^1.9.0",
     "multer": "^1.3.1",
     "reflect-metadata": "^0.1.12",
     "routing-controllers": "^0.7.7",
     "rxjs": "^6.0.0",
-    "typegoose": "^5.2.1",
     "zone.js": "^0.8.26"
   },
   "devDependencies": {
@@ -64,8 +61,6 @@
     "@types/express": "^4.16.0",
     "@types/jasmine": "~2.8.6",
     "@types/jasminewd2": "~2.0.3",
-    "@types/mongodb": "^3.1.0",
-    "@types/mongoose": "^5.0.18",
     "@types/body-parser": "^1.17.0",
     "@types/multer": "^1.3.7",
     "@types/morgan": "^1.7.35",
