--- a/package.json
+++ b/package.json
@@ -60,14 +60,14 @@
     "@angular/cli": "~6.0.8",
     "@angular/compiler-cli": "^6.0.3",
     "@angular/language-service": "^6.0.3",
+    "@types/body-parser": "^1.17.0",
     "@types/express": "^4.16.0",
     "@types/jasmine": "~2.8.6",
     "@types/jasminewd2": "~2.0.3",
     "@types/mongodb": "^3.1.0",
     "@types/mongoose": "^5.0.18",
-    "@types/body-parser": "^1.17.0",
-    "@types/multer": "^1.3.7",
     "@types/morgan": "^1.7.35",
+    "@types/multer": "^1.3.7",
     "@types/node": "~8.9.4",
     "codelyzer": "~4.2.1",
     "concurrently": "^3.6.0",
@@ -83,6 +83,6 @@
     "protractor": "~5.3.0",
     "ts-node": "~5.0.1",
     "tslint": "~5.9.1",
-    "typescript": "^2.7.2"
+    "typescript": "~2.7.2"
   }
 }
