Test travis test

--- a/angular.json
+++ b/angular.json
@@ -96,13 +96,13 @@
       }
     },
     "client-e2e": {
-      "root": "e2e/",
+      "root": "./tests/e2e/",
       "projectType": "application",
       "architect": {
         "e2e": {
           "builder": "@angular-devkit/build-angular:protractor",
           "options": {
-            "protractorConfig": "e2e/protractor.conf.js",
+            "protractorConfig": "./tests/e2e/protractor.conf.js",
             "devServerTarget": "client:serve"
           },
           "configurations": {
@@ -114,7 +114,7 @@
         "lint": {
           "builder": "@angular-devkit/build-angular:tslint",
           "options": {
-            "tsConfig": "e2e/tsconfig.e2e.json",
+            "tsConfig": "./tests/e2e/tsconfig.e2e.json",
             "exclude": [
               "**/node_modules/**"
             ]
