--- a/package.json
+++ b/package.json
@@ -11,8 +11,7 @@
     "dev": "concurrently \"npm run dev:backend\" \"npm run dev:client\" ",
     "dev:client": "ng serve --progress false",
     "e2e": "ng e2e",
-    "dev:backend": "nodemon",
-    "test": "ng e2e"
+    "dev:backend": "nodemon"
   },
   "repository": {
     "type": "git",
@@ -44,12 +43,13 @@
     "@angular/platform-browser-dynamic": "^6.0.3",
     "@angular/router": "^6.0.3",
     "body-parser": "^1.18.3",
+    "bulma": "^0.7.1",
     "colors": "^1.3.0",
     "core-js": "^2.5.4",
     "dotenv": "^6.0.0",
     "express": "^4.16.3",
-    "morgan": "^1.9.0",
     "mongoose": "^5.1.7",
+    "morgan": "^1.9.0",
     "multer": "^1.3.1",
     "reflect-metadata": "^0.1.12",
     "routing-controllers": "^0.7.7",
