--- a/package.json
+++ b/package.json
@@ -10,7 +10,6 @@
     "start:prod": "pm2 start ./dist/server/server.js --no-daemon",
     "dev": "concurrently \"npm run dev:backend\" \"npm run dev:client\" ",
     "dev:client": "ng serve --progress false",
-    "e2e": "ng e2e",
     "dev:backend": "nodemon"
   },
   "repository": {
@@ -63,6 +62,7 @@
     "@angular/compiler-cli": "^6.0.3",
     "@angular/language-service": "^6.0.3",
     "@types/body-parser": "^1.17.0",
+    "@types/dotenv": "^4.0.3",
     "@types/express": "^4.16.0",
     "@types/jasmine": "^2.8.8",
     "@types/jasminewd2": "~2.0.3",
