--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "bulma": "^0.7.1",
     "colors": "^1.3.0",
     "core-js": "^2.5.4",
+    "cors": "^2.8.4",
     "dotenv": "^6.0.0",
     "express": "^4.16.3",
     "mongoose": "^5.1.7",
