fixed deprecation mongodb connection, added global logger

--- a/.example.env
+++ b/.example.env
@@ -1,4 +1,4 @@
 SERVER_PORT=80
-DATABASE_URL=mongodb://localhost/mangoapp
+DATABASE_URL=mongodb://localhost:27017/mangoapp
 DATABASE_MAX_TRY=5
 JWT_SECRET=test123
