--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "morgan": "^1.9.0",
     "multer": "^1.3.1",
     "reflect-metadata": "^0.1.12",
+    "rotating-file-stream": "^1.3.6",
     "routing-controllers": "^0.7.7",
     "rxjs": "^6.0.0",
     "typegoose": "^5.2.1",
