--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "ng": "ng",
     "build": "rimraf dist && ng build --prod --aot --base-href ./ && tsc --project ./server/tsconfig.json",
-    "start": "cross-env NODE_ENV=production pm2 start ./dist/server/server.js --no-daemon",
+    "start": "npx cross-env NODE_ENV=production pm2 start ./dist/server/server.js --no-daemon",
     "build-start": "npm run build && npm run start",
     "dev": "concurrently \"npm run dev:backend\" \"npm run dev:client\" ",
     "dev:client": "ng serve --progress false",
@@ -32,15 +32,15 @@
   "homepage": "https://github.com/MrARC/Mango#readme",
   "private": true,
   "dependencies": {
-    "@angular/animations": "^6.0.3",
-    "@angular/common": "^6.0.3",
-    "@angular/compiler": "^6.0.3",
-    "@angular/core": "^6.0.3",
-    "@angular/forms": "^6.0.3",
-    "@angular/http": "^6.0.3",
-    "@angular/platform-browser": "^6.0.3",
-    "@angular/platform-browser-dynamic": "^6.0.3",
-    "@angular/router": "^6.0.3",
+    "@angular/animations": "^6.0.9",
+    "@angular/common": "^6.0.9",
+    "@angular/compiler": "^6.0.9",
+    "@angular/core": "^6.0.9",
+    "@angular/forms": "^6.0.9",
+    "@angular/http": "^6.0.9",
+    "@angular/platform-browser": "^6.0.9",
+    "@angular/platform-browser-dynamic": "^6.0.9",
+    "@angular/router": "^6.0.9",
     "body-parser": "^1.18.3",
     "bulma": "^0.7.1",
     "colors": "^1.3.0",
@@ -48,21 +48,21 @@
     "cors": "^2.8.4",
     "dotenv": "^6.0.0",
     "express": "^4.16.3",
-    "mongoose": "^5.1.7",
+    "mongoose": "^5.2.3",
     "morgan": "^1.9.0",
     "multer": "^1.3.1",
     "reflect-metadata": "^0.1.12",
     "rotating-file-stream": "^1.3.6",
     "routing-controllers": "^0.7.7",
-    "rxjs": "^6.0.0",
+    "rxjs": "^6.2.2",
     "typegoose": "^5.2.1",
     "zone.js": "^0.8.26"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.6.8",
     "@angular/cli": "~6.0.8",
-    "@angular/compiler-cli": "^6.0.3",
-    "@angular/language-service": "^6.0.3",
+    "@angular/compiler-cli": "^6.0.9",
+    "@angular/language-service": "^6.0.9",
     "@types/body-parser": "^1.17.0",
     "@types/dotenv": "^4.0.3",
     "@types/express": "^4.16.0",
@@ -83,7 +83,7 @@
     "karma-coverage-istanbul-reporter": "~2.0.0",
     "karma-jasmine": "~1.1.1",
     "karma-jasmine-html-reporter": "^0.2.2",
-    "nodemon": "^1.17.5",
+    "nodemon": "^1.18.2",
     "pm2": "^2.10.4",
     "protractor": "~5.3.0",
     "ts-node": "~5.0.1",
