--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "@angular/platform-browser": "^6.0.9",
     "@angular/platform-browser-dynamic": "^6.0.9",
     "@angular/router": "^6.0.9",
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.18.3",
     "bulma": "^0.7.1",
     "colors": "^1.3.0",
@@ -48,6 +49,7 @@
     "cors": "^2.8.4",
     "dotenv": "^6.0.0",
     "express": "^4.16.3",
+    "jsonwebtoken": "^8.3.0",
     "mongoose": "^5.2.3",
     "morgan": "^1.9.0",
     "multer": "^1.3.1",
@@ -68,6 +70,7 @@
     "@types/express": "^4.16.0",
     "@types/jasmine": "^2.8.8",
     "@types/jasminewd2": "~2.0.3",
+    "@types/jsonwebtoken": "^7.2.8",
     "@types/mongodb": "^3.1.0",
     "@types/mongoose": "^5.0.18",
     "@types/morgan": "^1.7.35",
