JWT now working for register, moment.js added, user validation added

--- a/.example.env
+++ b/.example.env
@@ -1,4 +1,5 @@
 SERVER_PORT=3000
 DATABASE_URL=mongodb://localhost:27017/mangoapp
 DATABASE_MAX_TRY=5
+DATABASE_RECONNECT_SECONDS=10
 JWT_SECRET=test123
