--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "dotenv": "^6.0.0",
     "express": "^4.16.3",
     "jsonwebtoken": "^8.3.0",
+    "moment": "^2.22.2",
     "mongoose": "^5.2.3",
     "morgan": "^1.9.0",
     "multer": "^1.3.1",
