--- a/e2e/tsconfig.e2e.json
+++ b/e2e/tsconfig.e2e.json
@@ -1,5 +1,5 @@
 {
-  "extends": "../../client/tsconfig.json",
+  "extends": "../client/tsconfig.json",
   "compilerOptions": {
     "outDir": "../dist/e2e",
     "module": "commonjs",
