--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "@angular/platform-browser": "^6.0.9",
     "@angular/platform-browser-dynamic": "^6.0.9",
     "@angular/router": "^6.0.9",
+    "bcrypt": "^3.0.0",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.18.3",
     "bulma": "^0.7.1",
@@ -66,6 +67,7 @@
     "@angular/cli": "~6.0.8",
     "@angular/compiler-cli": "^6.0.9",
     "@angular/language-service": "^6.0.9",
+    "@types/bcrypt": "^2.0.0",
     "@types/body-parser": "^1.17.0",
     "@types/dotenv": "^4.0.3",
     "@types/express": "^4.16.0",
