--- a/.example.env
+++ b/.example.env
@@ -1,5 +1,10 @@
 SERVER_PORT=3000
-DATABASE_URL=mongodb://localhost:27017/mangoapp
+DATABASE_TYPE=mysql
+DATABASE_HOST=localhost
+DATABASE_PORT=3306
+DATABASE_USER=root
+DATABASE_PASSWORD=
+DATABASE_NAME=mango
 DATABASE_MAX_TRY=5
 DATABASE_RECONNECT_SECONDS=10
 JWT_SECRET=test123
