--- a/package.json
+++ b/package.json
@@ -1,99 +1,98 @@
 {
-  "name": "mango",
-  "version": "1.0.0",
-  "description": "A MEAN (Mongo Express Angular Node) template with some GraphQL flavour",
-  "main": "index.js",
-  "scripts": {
-    "ng": "ng",
-    "build": "rimraf dist && ng build --prod --aot --base-href ./ && tsc --project ./server/tsconfig.json",
-    "start": "npx cross-env NODE_ENV=production pm2 start ./dist/server/server.js --no-daemon",
-    "build-start": "npm run build && npm run start",
-    "dev": "concurrently \"npm run dev:backend\" \"npm run dev:client\" ",
-    "dev:client": "ng serve --progress false",
-    "dev:backend": "nodemon"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/MrARC/Mango.git"
-  },
-  "keywords": [
-    "graphql-mean",
-    "typescript",
-    "mongo",
-    "express",
-    "node",
-    "angular"
-  ],
-  "author": "Alfonso Reyes",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/MrARC/Mango/issues"
-  },
-  "homepage": "https://github.com/MrARC/Mango#readme",
-  "private": true,
-  "dependencies": {
-    "@angular/animations": "^6.0.9",
-    "@angular/common": "^6.0.9",
-    "@angular/compiler": "^6.0.9",
-    "@angular/core": "^6.0.9",
-    "@angular/forms": "^6.0.9",
-    "@angular/http": "^6.0.9",
-    "@angular/platform-browser": "^6.0.9",
-    "@angular/platform-browser-dynamic": "^6.0.9",
-    "@angular/router": "^6.0.9",
-    "bcrypt": "^3.0.0",
-    "bcryptjs": "^2.4.3",
-    "body-parser": "^1.18.3",
-    "bulma": "^0.7.1",
-    "colors": "^1.3.0",
-    "core-js": "^2.5.4",
-    "cors": "^2.8.4",
-    "dotenv": "^6.0.0",
-    "express": "^4.16.3",
-    "jsonwebtoken": "^8.3.0",
-    "moment": "^2.22.2",
-    "mongoose": "^5.2.4",
-    "morgan": "^1.9.0",
-    "multer": "^1.3.1",
-    "reflect-metadata": "^0.1.12",
-    "rotating-file-stream": "^1.3.7",
-    "routing-controllers": "^0.7.7",
-    "rxjs": "^6.2.2",
-    "typegoose": "^5.2.1",
-    "zone.js": "^0.8.26"
-  },
-  "devDependencies": {
-    "@angular-devkit/build-angular": "~0.6.8",
-    "@angular/cli": "~6.0.8",
-    "@angular/compiler-cli": "^6.0.9",
-    "@angular/language-service": "^6.0.9",
-    "@types/bcrypt": "^2.0.0",
-    "@types/body-parser": "^1.17.0",
-    "@types/dotenv": "^4.0.3",
-    "@types/express": "^4.16.0",
-    "@types/jasmine": "^2.8.8",
-    "@types/jasminewd2": "~2.0.3",
-    "@types/jsonwebtoken": "^7.2.8",
-    "@types/mongodb": "^3.1.0",
-    "@types/mongoose": "^5.0.18",
-    "@types/morgan": "^1.7.35",
-    "@types/multer": "^1.3.7",
-    "@types/node": "~8.9.4",
-    "codelyzer": "~4.2.1",
-    "concurrently": "^3.6.0",
-    "cross-env": "^5.2.0",
-    "jasmine-core": "~2.99.1",
-    "jasmine-spec-reporter": "~4.2.1",
-    "karma": "~1.7.1",
-    "karma-chrome-launcher": "~2.2.0",
-    "karma-coverage-istanbul-reporter": "~2.0.0",
-    "karma-jasmine": "~1.1.1",
-    "karma-jasmine-html-reporter": "^0.2.2",
-    "nodemon": "^1.18.3",
-    "pm2": "^2.10.4",
-    "protractor": "~5.3.0",
-    "ts-node": "~5.0.1",
-    "tslint": "~5.9.1",
-    "typescript": "~2.7.2"
-  }
+   "name": "mango",
+   "version": "1.0.0",
+   "description": "A MEAN (MySQL Express Angular Node) template",
+   "main": "index.js",
+   "scripts": {
+      "ng": "ng",
+      "build": "npx rimraf dist && ng build --prod --aot --base-href ./ && tsc --project ./server/tsconfig.json",
+      "start": "ts-node src/index.ts",
+      "build-start": "npm run build && npm run start",
+      "dev": "concurrently \"npm run dev:backend\" \"npm run dev:client\" ",
+      "dev:client": "ng serve --progress false",
+      "dev:backend": "nodemon"
+   },
+   "repository": {
+      "type": "git",
+      "url": "git+https://github.com/MrARC/Mango.git"
+   },
+   "keywords": [
+      "typescript",
+      "MySQL",
+      "express",
+      "node",
+      "angular"
+   ],
+   "author": "Alfonso Reyes",
+   "license": "ISC",
+   "bugs": {
+      "url": "https://github.com/MrARC/Mango/issues"
+   },
+   "homepage": "https://github.com/MrARC/Mango#readme",
+   "private": true,
+   "dependencies": {
+      "@angular/animations": "^6.0.9",
+      "@angular/common": "^6.0.9",
+      "@angular/compiler": "^6.0.9",
+      "@angular/core": "^6.0.9",
+      "@angular/forms": "^6.0.9",
+      "@angular/http": "^6.0.9",
+      "@angular/platform-browser": "^6.0.9",
+      "@angular/platform-browser-dynamic": "^6.0.9",
+      "@angular/router": "^6.0.9",
+      "bcrypt": "^3.0.0",
+      "bcryptjs": "^2.4.3",
+      "body-parser": "^1.18.3",
+      "bulma": "^0.7.1",
+      "colors": "^1.3.1",
+      "core-js": "^2.5.4",
+      "cors": "^2.8.4",
+      "dotenv": "^6.0.0",
+      "express": "^4.16.3",
+      "jsonwebtoken": "^8.3.0",
+      "moment": "^2.22.2",
+      "morgan": "^1.9.0",
+      "multer": "^1.3.1",
+      "mysql": "^2.14.1",
+      "reflect-metadata": "^0.1.10",
+      "rotating-file-stream": "^1.3.7",
+      "routing-controllers": "^0.7.7",
+      "rxjs": "^6.2.2",
+      "typedi": "^0.8.0",
+      "typeorm": "0.2.7",
+      "uuid": "^3.3.2",
+      "zone.js": "^0.8.26"
+   },
+   "devDependencies": {
+      "@angular-devkit/build-angular": "~0.6.8",
+      "@angular/cli": "~6.0.8",
+      "@angular/compiler-cli": "^6.0.9",
+      "@angular/language-service": "^6.0.9",
+      "@types/bcrypt": "^2.0.0",
+      "@types/body-parser": "^1.17.0",
+      "@types/dotenv": "^4.0.3",
+      "@types/express": "^4.16.0",
+      "@types/jasmine": "^2.8.8",
+      "@types/jasminewd2": "~2.0.3",
+      "@types/jsonwebtoken": "^7.2.8",
+      "@types/morgan": "^1.7.35",
+      "@types/multer": "^1.3.7",
+      "@types/node": "^8.0.29",
+      "codelyzer": "~4.2.1",
+      "concurrently": "^3.6.1",
+      "cross-env": "^5.2.0",
+      "jasmine-core": "~2.99.1",
+      "jasmine-spec-reporter": "~4.2.1",
+      "karma": "~1.7.1",
+      "karma-chrome-launcher": "~2.2.0",
+      "karma-coverage-istanbul-reporter": "~2.0.0",
+      "karma-jasmine": "~1.1.1",
+      "karma-jasmine-html-reporter": "^0.2.2",
+      "nodemon": "^1.18.3",
+      "pm2": "^2.10.4",
+      "protractor": "~5.3.0",
+      "ts-node": "3.3.0",
+      "tslint": "~5.9.1",
+      "typescript": "2.5.2"
+   }
 }
