--- a/.example.env
+++ b/.example.env
@@ -5,6 +5,7 @@ DATABASE_PORT=3306
 DATABASE_USER=root
 DATABASE_PASSWORD=
 DATABASE_NAME=mango
+DATABASE_PREFIX=mango_
 DATABASE_MAX_TRY=5
 DATABASE_RECONNECT_SECONDS=10
 JWT_SECRET=test123
