--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
         "build": "rimraf dist && tsc --project ./server/tsconfig.json",
         "start": "npx cross-env NODE_ENV=production npx pm2 start ./dist/server/server.js --no-daemon",
         "build-start": "npm run build && npm run start",
-        "dev": "nodemon"
+        "dev": "nodemon",
+        "test": "jest"
     },
     "repository": {
         "type": "git",
@@ -45,7 +46,7 @@
         "typedi": "^0.8.0",
         "typeorm": "0.2.7",
         "winston": "^3.0.0",
-        "winston-daily-rotate-file": "^3.3.0"
+        "winston-daily-rotate-file": "3.1.3"
     },
     "devDependencies": {
         "@types/bcrypt": "^2.0.0",
@@ -59,10 +60,27 @@
         "@types/node": "^8.10.25",
         "concurrently": "^3.6.1",
         "cross-env": "^5.2.0",
+        "jest": "^23.5.0",
         "nodemon": "^1.18.3",
         "pm2": "^2.10.4",
+        "supertest": "^3.1.0",
+        "ts-jest": "^23.1.3",
         "ts-node": "3.3.0",
         "tslint": "~5.9.1",
         "typescript": "^2.9.2"
+    },
+    "jest": {
+        "transform": {
+            "^.+\\.tsx?$": "ts-jest"
+        },
+        "testRegex": "(/__tests__/.*|(\\.|/)(test|spec))\\.(jsx?|tsx?)$",
+        "moduleFileExtensions": [
+            "ts",
+            "tsx",
+            "js",
+            "jsx",
+            "json",
+            "node"
+        ]
     }
 }
