--- a/package.json
+++ b/package.json
@@ -5,10 +5,13 @@
     "main": "index.js",
     "scripts": {
         "build": "rimraf dist && tsc --project ./server/tsconfig.json",
-        "start": "npx cross-env NODE_ENV=production npx pm2 start ./dist/server/server.js --no-daemon",
+        "start": "npx pm2 start ecosystem.config.js --env production",
         "build-start": "npm run build && npm run start",
         "dev": "nodemon",
-        "test": "jest"
+        "lint": "npx tslint -t stylish --fix --project \"./server/tsconfig.json\"",
+        "pretest": "npm run lint",
+        "test": "npx jest",
+        "test:watch": "npx jest --watch"
     },
     "repository": {
         "type": "git",
@@ -66,7 +69,7 @@
         "supertest": "^3.1.0",
         "ts-jest": "^23.1.3",
         "ts-node": "3.3.0",
-        "tslint": "~5.9.1",
+        "tslint": "^5.9.1",
         "typescript": "^2.9.2"
     },
     "jest": {
