--- a/server/package.json
+++ b/server/package.json
@@ -4,14 +4,14 @@
     "description": "Server template",
     "main": "index.js",
     "scripts": {
-        "build": "rimraf dist && tsc --project ./server/tsconfig.json",
-        "start": "npx pm2 start ecosystem.config.js --env production",
+        "build": "rimraf dist && tsc --project ./tsconfig.json",
+        "start": "pm2 start ./ecosystem.config.js --env production",
         "build-start": "npm run build && npm run start",
         "dev": "nodemon",
-        "lint": "npx tslint -t stylish --fix --project \"./server/tsconfig.json\"",
+        "lint": "tslint -t stylish --fix --project \"./tsconfig.json\"",
         "pretest": "npm run lint",
-        "test": "npx jest",
-        "test:watch": "npx jest --watch"
+        "test": "jest",
+        "test:watch": "jest --watch"
     },
     "repository": {
         "type": "git",
@@ -65,7 +65,8 @@
         "cross-env": "^5.2.0",
         "jest": "^23.5.0",
         "nodemon": "^1.18.3",
-        "pm2": "^2.10.4",
+        "pm2": "^3.0.4",
+        "rimraf": "^2.6.2",
         "supertest": "^3.1.0",
         "ts-jest": "^23.1.3",
         "ts-node": "3.3.0",
