--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "compilerOptions": {
-    "baseUrl": "./src",
-    "outDir": "../dist/server",
+    "baseUrl": "./src/",
+    "outDir": "./dist/",
     "module": "commonjs",
     "sourceMap": false,
     "declaration": false,
@@ -12,9 +12,9 @@
     "target": "es6"
   },
   "include": [
-    "src/**/*.ts"
+    "./src/**/*.ts"
   ],
   "exclude": [
-    "src/**/*.spec.ts"
+    "./src/**/*.spec.ts"
   ]
 }
