--- a/server/package.json
+++ b/server/package.json
@@ -33,7 +33,8 @@
     "dependencies": {
         "bcrypt": "^3.0.0",
         "body-parser": "^1.18.3",
-        "class-validator": "^0.9.1",
+        "class-transformer": "~0.1.6",
+        "class-validator": "^0.7.0",
         "core-js": "^2.5.4",
         "cors": "^2.8.4",
         "dotenv": "^6.0.0",
@@ -48,7 +49,7 @@
         "routing-controllers": "^0.7.7",
         "typedi": "^0.8.0",
         "typeorm": "0.2.7",
-        "winston": "^3.0.0",
+        "winston": "^3.1.0",
         "winston-daily-rotate-file": "3.1.3"
     },
     "devDependencies": {
@@ -67,7 +68,7 @@
         "nodemon": "^1.18.3",
         "pm2": "^3.0.4",
         "rimraf": "^2.6.2",
-        "supertest": "^3.1.0",
+        "supertest": "^3.3.0",
         "ts-jest": "^23.1.3",
         "ts-node": "3.3.0",
         "tslint": "^5.9.1",
