--- a/server/package.json
+++ b/server/package.json
@@ -46,6 +46,7 @@
         "morgan": "^1.9.0",
         "multer": "^1.3.1",
         "mysql": "^2.14.1",
+        "redis": "^2.8.0",
         "reflect-metadata": "^0.1.10",
         "routing-controllers": "^0.7.7",
         "typedi": "^0.8.0",
@@ -64,6 +65,7 @@
         "@types/morgan": "^1.7.35",
         "@types/multer": "^1.3.7",
         "@types/node": "^8.10.25",
+        "@types/redis": "^2.8.6",
         "@types/uuid": "^3.4.4",
         "concurrently": "^3.6.1",
         "cross-env": "^5.2.0",
