--- a/server/package.json
+++ b/server/package.json
@@ -31,53 +31,55 @@
     "homepage": "https://github.com/MrARC/Mango#readme",
     "private": true,
     "dependencies": {
-        "bcrypt": "^3.0.0",
+        "bcrypt": "^3.0.1",
         "body-parser": "^1.18.3",
-        "class-transformer": "~0.1.6",
-        "class-validator": "^0.7.0",
-        "core-js": "^2.5.4",
+        "class-transformer": "~0.1.9",
+        "class-validator": "^0.9.1",
+        "core-js": "^2.5.7",
         "cors": "^2.8.4",
         "dotenv": "^6.0.0",
         "express": "^4.16.3",
         "express-http-context": "^1.1.0",
+        "gm": "^1.23.1",
         "helmet": "^3.13.0",
         "jsonwebtoken": "^8.3.0",
         "moment": "^2.22.2",
-        "morgan": "^1.9.0",
-        "multer": "^1.3.1",
-        "mysql": "^2.14.1",
+        "morgan": "^1.9.1",
+        "multer": "^1.4.0",
+        "mysql": "^2.16.0",
         "redis": "^2.8.0",
-        "reflect-metadata": "^0.1.10",
+        "reflect-metadata": "^0.1.12",
         "routing-controllers": "^0.7.7",
         "typedi": "^0.8.0",
         "typeorm": "0.2.7",
         "uuid": "^3.3.2",
         "winston": "^3.1.0",
-        "winston-daily-rotate-file": "3.1.3"
+        "winston-daily-rotate-file": "3.3.3"
     },
     "devDependencies": {
-        "@types/bcrypt": "^2.0.0",
+        "@types/bcrypt": "^3.0.0",
         "@types/body-parser": "^1.17.0",
         "@types/dotenv": "^4.0.3",
         "@types/express": "^4.16.0",
-        "@types/jest": "^23.3.1",
+        "@types/gm": "^1.18.0",
+        "@types/jest": "^23.3.3",
         "@types/jsonwebtoken": "^7.2.8",
         "@types/morgan": "^1.7.35",
         "@types/multer": "^1.3.7",
-        "@types/node": "^8.10.25",
+        "@types/node": "^10.11.4",
         "@types/redis": "^2.8.6",
         "@types/uuid": "^3.4.4",
-        "concurrently": "^3.6.1",
+        "concurrently": "^4.0.1",
         "cross-env": "^5.2.0",
-        "jest": "^23.5.0",
-        "nodemon": "^1.18.3",
-        "pm2": "^3.0.4",
+        "jest": "^23.6.0",
+        "nodemon": "^1.18.4",
+        "pm2": "^3.2.1",
         "rimraf": "^2.6.2",
         "supertest": "^3.3.0",
-        "ts-jest": "^23.1.3",
+        "ts-jest": "^23.10.3",
         "ts-node": "3.3.0",
-        "tslint": "^5.9.1",
-        "typescript": "^2.9.2"
+        "tslint": "^5.11.0",
+        "typescript": "^3.1.1"
     },
     "jest": {
         "transform": {
