--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -10,7 +10,10 @@
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
     "removeComments": true,
-    "target": "es6"
+    "target": "es6",
+    "lib": [
+      "es7"
+    ]
   },
   "include": [
     "./src/**/*.ts"
