Added redis connection

--- a/server/.example.env
+++ b/server/.example.env
@@ -8,4 +8,7 @@ DATABASE_NAME=mango
 DATABASE_PREFIX=mango_
 DATABASE_MAX_TRY=5
 DATABASE_RECONNECT_SECONDS=10
+REDIS_HOST=localhost
+REDIS_PORT=6379
+REDIS_AUTH=
 JWT_SECRET=test123
