--- a/server/package.json
+++ b/server/package.json
@@ -62,12 +62,13 @@
         "@types/dotenv": "^4.0.3",
         "@types/express": "^4.16.0",
         "@types/gm": "^1.18.1",
-        "@types/jest": "^23.3.3",
+        "@types/jest": "^23.3.5",
         "@types/jsonwebtoken": "^7.2.8",
         "@types/morgan": "^1.7.35",
         "@types/multer": "^1.3.7",
         "@types/node": "^10.11.4",
         "@types/redis": "^2.8.6",
+        "@types/supertest": "^2.0.6",
         "@types/uuid": "^3.4.4",
         "concurrently": "^4.0.1",
         "cross-env": "^5.2.0",
@@ -93,6 +94,14 @@
             "jsx",
             "json",
             "node"
+        ],
+        "collectCoverage": true,
+        "collectCoverageFrom": [
+            "src/**/*.ts"
+        ],
+        "coverageReporters": [
+            "html",
+            "json"
         ]
     }
 }
