--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -12,7 +12,8 @@
     "removeComments": true,
     "target": "es6",
     "lib": [
-      "es7"
+      "es7",
+      "dom"
     ]
   },
   "include": [
