Example test added

--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -4,7 +4,8 @@
     "rootDir": "./src/",
     "outDir": "./dist/",
     "module": "commonjs",
-    "sourceMap": false,
+    "sourceMap": true,
+    "sourceRoot": ".",
     "declaration": false,
     "moduleResolution": "node",
     "emitDecoratorMetadata": true,
