--- a/server/package.json
+++ b/server/package.json
@@ -79,6 +79,7 @@
         "ts-jest": "^23.10.4",
         "ts-node": "3.3.0",
         "tslint": "^5.11.0",
+        "typedoc": "^0.13.0",
         "typescript": "^3.1.1"
     },
     "jest": {
