--- a/server/package.json
+++ b/server/package.json
@@ -10,7 +10,9 @@
         "dev": "nodemon --inspect",
         "lint": "tslint -t stylish --fix --project \"./tsconfig.json\"",
         "test": "jest",
-        "test:watch": "jest --watch"
+        "test:watch": "jest --watch",
+        "add:controller": "plop controller",
+        "add:service": "plop service"
     },
     "repository": {
         "type": "git",
@@ -73,6 +75,7 @@
         "cross-env": "^5.2.0",
         "jest": "^23.6.0",
         "nodemon": "^1.18.6",
+        "plop": "^2.1.0",
         "pm2": "^3.2.2",
         "rimraf": "^2.6.2",
         "supertest": "^3.3.0",
