--- a/server/package.json
+++ b/server/package.json
@@ -11,8 +11,7 @@
         "lint": "tslint -t stylish --fix --project \"./tsconfig.json\"",
         "test": "jest",
         "test:watch": "jest --watch",
-        "add:controller": "plop controller",
-        "add:service": "plop service"
+        "add:module": "plop module"
     },
     "repository": {
         "type": "git",
@@ -32,25 +31,25 @@
     "homepage": "https://github.com/MrARC/Mango#readme",
     "private": true,
     "dependencies": {
-        "bcrypt": "^3.0.2",
+        "bcrypt": "^3.0.3",
         "body-parser": "^1.18.3",
         "class-transformer": "~0.2.0",
         "class-validator": "^0.9.1",
-        "core-js": "^2.5.7",
+        "core-js": "^2.6.1",
         "cors": "^2.8.5",
-        "dotenv": "^6.1.0",
+        "dotenv": "^6.2.0",
         "express": "^4.16.4",
         "express-http-context": "^1.2.0",
-        "gm": "^1.23.1",
         "helmet": "^3.15.0",
         "jsonwebtoken": "^8.4.0",
-        "moment": "^2.22.2",
+        "moment": "^2.23.0",
         "morgan": "^1.9.1",
         "multer": "^1.4.1",
         "mysql": "^2.16.0",
         "redis": "^2.8.0",
         "reflect-metadata": "^0.1.12",
         "routing-controllers": "^0.7.7",
+        "sharp": "^0.21.1",
         "typedi": "^0.8.0",
         "typeorm": "0.2.9",
         "typeorm-typedi-extensions": "^0.2.1",
@@ -63,28 +62,28 @@
         "@types/body-parser": "^1.17.0",
         "@types/dotenv": "^6.1.0",
         "@types/express": "^4.16.0",
-        "@types/gm": "^1.18.2",
         "@types/jest": "^23.3.9",
         "@types/jsonwebtoken": "^8.3.0",
         "@types/morgan": "^1.7.35",
         "@types/multer": "^1.3.7",
-        "@types/node": "^10.12.9",
-        "@types/redis": "^2.8.7",
-        "@types/supertest": "^2.0.6",
+        "@types/node": "^10.12.18",
+        "@types/redis": "^2.8.10",
+        "@types/sharp": "^0.21.0",
+        "@types/supertest": "^2.0.7",
         "@types/uuid": "^3.4.4",
         "concurrently": "^4.1.0",
         "cross-env": "^5.2.0",
         "jest": "^23.6.0",
-        "nodemon": "^1.18.7",
-        "plop": "^2.1.0",
-        "pm2": "^3.2.2",
+        "nodemon": "^1.18.9",
+        "plop": "^2.2.0",
+        "pm2": "^3.2.4",
         "rimraf": "^2.6.2",
         "supertest": "^3.3.0",
         "ts-jest": "^23.10.4",
         "ts-node": "7.0.1",
-        "tslint": "^5.11.0",
+        "tslint": "^5.12.0",
         "typedoc": "^0.13.0",
-        "typescript": "^3.1.6"
+        "typescript": "^3.2.2"
     },
     "jest": {
         "transform": {
