--- a/server/package.json
+++ b/server/package.json
@@ -62,6 +62,7 @@
         "@types/body-parser": "^1.17.0",
         "@types/dotenv": "^6.1.0",
         "@types/express": "^4.16.0",
+        "@types/helmet": "0.0.42",
         "@types/jest": "^23.3.9",
         "@types/jsonwebtoken": "^8.3.0",
         "@types/morgan": "^1.7.35",
