--- a/server/.example.env
+++ b/server/.example.env
@@ -1,14 +1,20 @@
+# server port, be sure to use any port above 1000 or you will require elevated permissions (root)
 PORT=3000
-DATABASE_TYPE=mysql
-DATABASE_HOST=localhost
-DATABASE_PORT=3306
-DATABASE_USER=root
-DATABASE_PASSWORD=
-DATABASE_NAME=mango
-DATABASE_PREFIX=mango_
-DATABASE_MAX_TRY=5
+
+# mysql settings
+MYSQL_HOST=localhost
+MYSQL_PORT=3306
+MYSQL_USER=root
+MYSQL_PASSWORD=
+MYSQL_DB_NAME=mango
+MYSQL_PREFIX=mango_
+DATABASE_MAX_TRY_RECONNECT=5
 DATABASE_RECONNECT_SECONDS=10
+
+# redis settings
 REDIS_HOST=localhost
 REDIS_PORT=6379
 REDIS_AUTH=
+
+# jwt secret
 JWT_SECRET=test123
