--- a/server/package.json
+++ b/server/package.json
@@ -40,6 +40,7 @@
         "dotenv": "^6.2.0",
         "express": "^4.16.4",
         "express-http-context": "^1.2.0",
+        "fs-extra": "^7.0.1",
         "helmet": "^3.15.0",
         "jsonwebtoken": "^8.4.0",
         "moment": "^2.23.0",
@@ -62,6 +63,7 @@
         "@types/body-parser": "^1.17.0",
         "@types/dotenv": "^6.1.0",
         "@types/express": "^4.16.0",
+        "@types/fs-extra": "^5.0.4",
         "@types/helmet": "0.0.42",
         "@types/jest": "^23.3.9",
         "@types/jsonwebtoken": "^8.3.0",
