--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -9,8 +9,7 @@
       "type": "node",
       "request": "launch",
       "name": "Launch",
-      "useWSL": true,
-      "protocol": "auto",
+      "protocol": "inspector",
       "port": 9229,
       "sourceMaps": true,
       "timeout": 10000,
