Modified PM2 to allow cluster mode, added config options, removed default profile picture row creation

--- a/src/config/environments/production.config.json
+++ b/src/config/environments/production.config.json
@@ -1,5 +1,11 @@
 {
-  "logger": {
-    "file": true
+  "jwt": {
+    "token_life": "15m",
+    "refresh_token_max_life": "14d"
+  },
+  "logging": {
+    "file": {
+      "enabled": true
+    }
   }
 }
