--- a/package.json
+++ b/package.json
@@ -43,24 +43,24 @@
     "express-http-context": "^1.2.0",
     "fs-extra": "^7.0.1",
     "helmet": "^3.15.1",
-    "jsonwebtoken": "^8.4.0",
+    "jsonwebtoken": "^8.5.0",
     "moment": "^2.24.0",
     "morgan": "^1.9.1",
     "multer": "^1.4.1",
     "mysql": "^2.16.0",
     "nconf": "^0.10.0",
-    "pm2": "^3.2.9",
+    "pm2": "^3.3.1",
     "redis": "^2.8.0",
     "reflect-metadata": "^0.1.13",
     "routing-controllers": "^0.7.7",
     "sharp": "^0.21.3",
     "typedi": "^0.8.0",
-    "typeorm": "0.2.12",
+    "typeorm": "^0.2.14",
     "typeorm-typedi-extensions": "^0.2.3",
-    "typescript": "^3.3.3",
+    "typescript": "^3.3.3333",
     "uuid": "^3.3.2",
     "winston": "^3.2.1",
-    "winston-daily-rotate-file": "3.5.1"
+    "winston-daily-rotate-file": "^3.8.0"
   },
   "devDependencies": {
     "@types/bcrypt": "^3.0.0",
@@ -68,13 +68,13 @@
     "@types/dotenv": "^6.1.0",
     "@types/express": "^4.16.1",
     "@types/fs-extra": "^5.0.5",
-    "@types/helmet": "0.0.42",
-    "@types/jest": "^24.0.5",
+    "@types/helmet": "^0.0.42",
+    "@types/jest": "^24.0.9",
     "@types/jsonwebtoken": "^8.3.0",
     "@types/morgan": "^1.7.35",
     "@types/multer": "^1.3.7",
-    "@types/nconf": "0.10.0",
-    "@types/node": "^10.12.26",
+    "@types/nconf": "^0.10.0",
+    "@types/node": "^10.12.29",
     "@types/redis": "^2.8.10",
     "@types/sharp": "^0.21.2",
     "@types/supertest": "^2.0.7",
@@ -83,12 +83,12 @@
     "cross-env": "^5.2.0",
     "jest": "^24.1.0",
     "nodemon": "^1.18.10",
-    "plop": "^2.2.0",
+    "plop": "^2.3.0",
     "rimraf": "^2.6.3",
     "supertest": "^3.4.2",
-    "ts-jest": "^23.10.5",
+    "ts-jest": "^24.0.0",
     "ts-node": "8.0.2",
-    "tslint": "^5.12.1",
+    "tslint": "^5.13.1",
     "typedoc": "^0.14.2"
   }
 }
