--- a/package.json
+++ b/package.json
@@ -42,7 +42,7 @@
     "express": "^4.16.4",
     "express-http-context": "^1.2.0",
     "fs-extra": "^7.0.1",
-    "helmet": "^3.15.1",
+    "helmet": "^3.16.0",
     "jsonwebtoken": "^8.5.0",
     "moment": "^2.24.0",
     "morgan": "^1.9.1",
@@ -69,19 +69,21 @@
     "@types/express": "^4.16.1",
     "@types/fs-extra": "^5.0.5",
     "@types/helmet": "^0.0.42",
-    "@types/jest": "^24.0.9",
-    "@types/jsonwebtoken": "^8.3.0",
+    "@types/jest": "^24.0.11",
+    "@types/jsonwebtoken": "^8.3.2",
     "@types/morgan": "^1.7.35",
     "@types/multer": "^1.3.7",
     "@types/nconf": "^0.10.0",
-    "@types/node": "^10.12.29",
+    "@types/node": "^10.12.30",
     "@types/redis": "^2.8.10",
-    "@types/sharp": "^0.21.2",
+    "@types/sharp": "^0.21.3",
     "@types/supertest": "^2.0.7",
     "@types/uuid": "^3.4.4",
     "concurrently": "^4.1.0",
     "cross-env": "^5.2.0",
-    "jest": "^24.1.0",
+    "faker": "^4.1.0",
+    "inquirer": "^6.2.2",
+    "jest": "^24.3.1",
     "nodemon": "^1.18.10",
     "plop": "^2.3.0",
     "rimraf": "^2.6.3",
