--- a/package.json
+++ b/package.json
@@ -65,10 +65,13 @@
   "devDependencies": {
     "@types/bcrypt": "^3.0.0",
     "@types/body-parser": "^1.17.0",
+    "@types/commander": "^2.12.2",
     "@types/dotenv": "^6.1.0",
     "@types/express": "^4.16.1",
+    "@types/faker": "^4.1.5",
     "@types/fs-extra": "^5.0.5",
     "@types/helmet": "^0.0.42",
+    "@types/inquirer": "0.0.44",
     "@types/jest": "^24.0.11",
     "@types/jsonwebtoken": "^8.3.2",
     "@types/morgan": "^1.7.35",
@@ -79,6 +82,7 @@
     "@types/sharp": "^0.21.3",
     "@types/supertest": "^2.0.7",
     "@types/uuid": "^3.4.4",
+    "commander": "^2.19.0",
     "concurrently": "^4.1.0",
     "cross-env": "^5.2.0",
     "faker": "^4.1.0",
