Added new extensions to the recommended list for vs-code

--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -1,5 +1,7 @@
 {
   "recommendations": [
-    "EditorConfig.editorconfig"
+    "EditorConfig.editorconfig",
+    "ms-vscode.vscode-typescript-tslint-plugin",
+    "mikestead.dotenv"
   ]
 }
